BIS-2564: Read files in chunks and clean up